force-app/main/default/objects/Contrato__c/Contrato__c.object-meta.xml
<CustomObject>
    <description>Addendum to the Soybean Germplasm Aggrement.</description>
    <label>Schedule A</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Schedule A Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>