force-app/main/default/objects/Contrato__c/fields/Aditivo_Facturado_del__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_Facturado_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se facturó el aditivo y lo inhabilita para volver a utilizarlo.</description>
    <label>Aditivo Facturado</label>
    <type>Checkbox</type>
</CustomField>