force-app/main/default/objects/Contrato__c/fields/Chegou_na_Brasmax__c.field-meta.xml
<CustomField>
    <fullName>Chegou_na_Brasmax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click to inform that the contract returned signed by the licensee.</description>
    <inlineHelpText>Click to inform that the contract returned signed by the licensee.</inlineHelpText>
    <label>Signed</label>
    <type>Checkbox</type>
</CustomField>