force-app/main/default/objects/Contrato__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Schedules A</relationshipLabel>
    <relationshipName>Schedules_A</relationshipName>
    <type>Lookup</type>
</CustomField>