force-app/main/default/objects/Contrato__c/fields/Data_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Envio__c</fullName>
    <description>Sending Date by post mail</description>
    <inlineHelpText>Sending Date by post mail</inlineHelpText>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>