force-app/main/default/objects/Contrato__c/fields/Data_de_Recebemento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Recebemento__c</fullName>
    <description>Se já foi enviado, data de Recebemento</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>