force-app/main/default/objects/Contrato__c/fields/License_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Date__c</fullName>
    <label>License Date</label>
    <type>Date</type>
</CustomField>