force-app/main/default/objects/Contrato__c/fields/Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Multiplicador__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Licensee Account</description>
    <label>Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contratos_de_Multiplicacion</relationshipName>
    <type>Lookup</type>
</CustomField>