force-app/main/default/objects/Contrato__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <description>Just a place for a note.</description>
    <inlineHelpText>Just a place for a note.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>