force-app/main/default/objects/Contrato__c/fields/OK_para_assinar__c.field-meta.xml
<CustomField>
    <fullName>OK_para_assinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click para informar que assinou. Isso porque, antes do envio do contrato precisa da assinatura</description>
    <inlineHelpText>Click para informar que assinou. Isso porque, antes do envio do contrato precisa da assinatura</inlineHelpText>
    <label>OK para assinar</label>
    <type>Checkbox</type>
</CustomField>