force-app/main/default/objects/Contrato__c/fields/Quem_negocia__c.field-meta.xml
<CustomField>
    <fullName>Quem_negocia__c</fullName>
    <description>Qual das empresas fez a negociação</description>
    <inlineHelpText>Qual das empresas fez a negociação</inlineHelpText>
    <label>Quem negocia?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRASMAX</fullName>
            </value>
            <value>
                <fullName>ROOS</fullName>
            </value>
            <value>
                <fullName>BUTIÁ</fullName>
            </value>
            <value>
                <fullName>MUTUCA</fullName>
            </value>
            <value>
                <fullName>DON MARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>