force-app/main/default/objects/Contrato__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24/2024</fullName>
            </value>
            <value>
                <fullName>23/2023</fullName>
            </value>
            <value>
                <fullName>22/2022</fullName>
            </value>
            <value>
                <fullName>21/2021</fullName>
            </value>
            <value>
                <fullName>20/2020</fullName>
            </value>
            <value>
                <fullName>19/2019</fullName>
            </value>
            <value>
                <fullName>18/2018</fullName>
            </value>
            <value>
                <fullName>17/2017</fullName>
            </value>
            <value>
                <fullName>16/2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>