force-app/main/default/objects/Contrato__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDM</fullName>
                <default>true</default>
                <label>GDM</label>
            </value>
            <value>
                <fullName>B&amp;B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>