force-app/main/default/objects/Contrato__c/fields/Tipo_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cambio__c</fullName>
    <label>Tipo de câmbio</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>