force-app/main/default/objects/Contrato__c/fields/Tipo_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contrato__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPRO</fullName>
            </value>
            <value>
                <fullName>XTEND</fullName>
            </value>
            <value>
                <fullName>ENLIST</fullName>
            </value>
            <value>
                <fullName>CONVENTIONAL</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>XTENDFLEX</fullName>
            </value>
            <value>
                <fullName>BASICA</fullName>
                <isActive>false</isActive>
                <label>BASICA</label>
            </value>
            <value>
                <fullName>MULTIPLICAÇÃO</fullName>
                <isActive>false</isActive>
                <label>MULTIPLICAÇÃO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>