force-app/main/default/objects/Contrato__c/fields/Tipo_de_Cota_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cota_o__c</fullName>
    <label>Tipo de Cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOLAR</fullName>
            </value>
            <value>
                <fullName>SOJA</fullName>
            </value>
            <value>
                <fullName>FATURAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>