force-app/main/default/objects/Contrato__c/fields/Tipo_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro__c</fullName>
    <description>Tipo de registros para completar la Sociedad con este valor</description>
    <formula>$RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tipo de registros para completar la Sociedad con este valor</inlineHelpText>
    <label>Tipo de registro</label>
    <type>Text</type>
</CustomField>