force-app/main/default/objects/Contrato__c/recordTypes/Parent_Seed_Schedule_A.recordType-meta.xml
<RecordType>
    <fullName>Parent_Seed_Schedule_A</fullName>
    <active>true</active>
    <label>Parent Seed Schedule A</label>
</RecordType>