force-app/main/default/objects/Contrato__c/recordTypes/Production_Seed_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Production_Seed_Schedule</fullName>
    <active>true</active>
    <label>Production Seed Schedule</label>
</RecordType>