force-app/main/default/objects/Contrato__c/recordTypes/Test_Seed_Schedule_A.recordType-meta.xml
<RecordType>
    <fullName>Test_Seed_Schedule_A</fullName>
    <active>true</active>
    <label>Test Seed Schedule A</label>
</RecordType>