force-app/main/default/objects/Contrato__c/recordTypes/Wholesale_Seed_Schedule_A.recordType-meta.xml
<RecordType>
    <fullName>Wholesale_Seed_Schedule_A</fullName>
    <active>false</active>
    <label>Wholesale Seed Schedule A</label>
</RecordType>