force-app/main/default/objects/Contrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sociedad__c</columns>
    <columns>Multiplicador__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>